2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: 143078 - Missed call icon in notifications should use phone app
	icon

	* src/notification-groups.conf: Use general_application_call instead
	of general_missed as the missed call icon.

2009-11-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#127501 - Task Switcher timestamp not rounded correctly.

	* src/hd-time-difference.c:
	* src/hd-time-difference.h: Add hd_time_difference_get_text and
	hd_time_difference_get_timeout helper functions (with unit tests) to
	handle time difference display (and timeout for next update).

	* src/Makefile.am: Add src/hd-time-difference.[ch] to SOURCES.

	* src/hd-incoming-event-window.c
	(hd_incoming_event_window_update_time): Us the new hd_time_difference


2009-11-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 0.3.54
	* configure.ac: 0.3.54 

2009-11-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#131297 and NB#142916

	* configure.ac:
	* debian/control: Depends on new libhildondesktop.

	* src/hd-bookmark-shortcut.c: Add fallback for thumbnail when the
	thumbnail icon is not available.

	* src/hd-bookmark-widgets.c: Use new functions to handle bookmark
	shortcut creation and deletion in libhildondesktop.

2009-10-28  Jan Arne Petersen  <jpetersen@openismus.com>

	Release 0.3.53

2009-10-28  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#144239 - Shortcut of customized application is missing after
	device restart

	* src/hd-shortcut-widgets.c (hd_shortcut_widgets_load_desktop_file):
	  Use symoblic constants for icon size.
	  (hd_shortcut_widgets_is_available):
	* src/hd-shortcut-widgets.h (hd_shortcut_widgets_is_available): Add
	  new function to check if .desktop file was already scanned.

	* src/hd-task-shortcut.c (load_icon_from_absolute_path,
	  load_icon_from_theme, load_default_icon, load_icon_from_icon_name,
	  hd_task_shortcut_desktop_file_changed_cb, hd_task_shortcut_show,